--- a/styles.css
+++ b/styles.css
@@ -246,3 +246,13 @@ a:hover {
     transform: translate(-50%, -50%);
     z-index: 99;
 }
+
+#wordContainer {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    width: 400px;
+    justify-content: space-between;
+}
